[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Rael <santosrafaelpro@gmail.com>"]
readme = "README.md"
packages = [{ include = "ai_agent" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
beautifulsoup4 = "^4.13.3"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
poetry-plugin-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"